--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,17 +4,16 @@
     box-sizing: border-box;
 }
 body{
-    font-family: 'Anek Latin', sans-serif;
-    font-family: 'Merriweather', serif;
     font-family: 'Montserrat', sans-serif;
-    font-family: 'Smooch', cursive;
-    font-family: 'Uchen', seri
+
 }
 a {
     text-decoration: none;
     
 }
-
+ p{
+    color: black;
+ }
 .header {
     background-color: #6A0649;
     color: #C70039;
