--- a/css/estilos.css
+++ b/css/estilos.css
@@ -224,6 +224,15 @@ a {
     margin: 20px;
 }
 
+.obras-imagenes{
+    transition: padding 2s;
+ 
+}
+.obras-imagenes:hover{
+    -webkit-transform:scale(1.3);
+    transform:scale(1.3) 3s;
+    
+}
 .obras-titulos{
     margin: 20px;
 }
