--- a/css/estilos.css
+++ b/css/estilos.css
@@ -224,80 +224,6 @@ a {
     margin: 20px;
 }
 
-.container{
-    margin: auto;
-    background-color: white;
-    width: 800px;
-    padding: 30px;
-  }
-
-  
-ul, li {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-
- 
-  ul.slider{
-    position: relative;
-    width: 800px;
-    height: 300px;
-    text-align: center;
-  }
-  
-  ul.slider li {
-      position: absolute;
-      left: 0px;
-      top: 0px;
-      opacity: 0;
-      width: inherit;
-      height: inherit;
-      transition: opacity .5s;
-      background:#fff;
-  }
-  
-  ul.slider li img{
-    object-fit: cover;
-    text-align: center;
-  }
-
-  
-  ul.slider li p:target{
-    position: relative;
-    overflow: hidden;
-    opacity: 1;
-  }
-  ul.slider li:first-child {
-      opacity: 1;
-  }
-  
-  ul.slider li:target {
-      opacity: 1;
-  }
-  
-  .menu{
-    text-align: center;
-    margin-top: 300px;
-    margin-left: 70px;
-  }
-  
-  .menu li{
-    display: inline-block;
-    text-align: center;
-  }
-  
-  .menu li a{
-    display: inline-block;
-    color: white;
-    text-decoration: none;
-    background-color: grey;
-    padding: 10px;
-    width: 20px;
-    height: 20px;
-    font-size: 20px;
-    border-radius: 100%;
-  }
 .obras-titulos{
     margin: 20px;
     text-align: center;
@@ -399,6 +325,8 @@ ul, li {
         grid-template-rows: repeat(6, 1fr);
         text-align: center;
     }
-
+    .cabeza-obras{
+        text-align: center;
+    }
  
 }
