--- a/scss/parciales/_contacto.scss
+++ b/scss/parciales/_contacto.scss
@@ -19,16 +19,21 @@
     margin: 100px;
     border: 2px solid grey; 
     padding: 10px;
-}
 
-.detalle-contacto div p{
+    & div p{
+        
     margin: 20px;
 }
+
+}
+
 
 .consulta{
     margin: 100px;
     border: 2px solid grey; 
     padding: 10px;
+
+    
 }
 
 .consulta div{
