--- a/scss/parciales/_media-querys.scss
+++ b/scss/parciales/_media-querys.scss
@@ -3,10 +3,10 @@
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: repeat(6, 1fr);
-        text-align: center;
+        text-align: $Centrado;
     }
     .cabeza-obras{
-        text-align: center;
+        text-align: $Centrado;
     }
  
 }
