--- a/css/estilos.css
+++ b/css/estilos.css
@@ -62,6 +62,7 @@ a {
 .textoPie {
   text-align: end;
   color: black;
+  margin-top: 100px;
 }
 
 .whatsapp {
@@ -244,7 +245,11 @@ a {
   padding-right: 40%;
 }
 
+.DetalleContainer{
 
+  margin-top: 30px;
+  
+}
 .contacto {
   font-size: 180%;
   position: relative;
@@ -293,8 +298,78 @@ a {
   }
 }
 
-@media screen and (max-width: 660px) {
+@media screen and (max-width: 780px) {
+  .grid_inicio-estilo {
+    border-bottom: 2px solid grey;
+    border-right: white;
+    position: relative;
+  }
+
+  .grid_inicio{
+    display: grid;
+    grid-template-columns: 2fr;
+    grid-template-rows: 2fr 2fr;
+    grid-template-areas: inicio presupuesto;
+    justify-content: center;
+    justify-items: center;
+    align-content: center;
+    align-items: center;
+  }
+
+  
+  .grid_estudio {
+    grid-area: inicio;
+  }
+ 
+
+
+  .grid_profesionales {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr);
+    height: 1000px;
+    grid-template-areas: "titulo" "pf1" "pf2" "pf3";
+    justify-content: center;
+    align-content: center;
+    justify-items: center;
+    align-items: center;
+  }
+  
+  .grid_profesionales-titulo {
+    grid-area: titulo;
+    font-size: 25px;
+    text-align: center;
+    height: 1px;
+    margin: 100px;
+  }
+  
+  .profesionales-subtitulo {
+    text-align: center;
+    font-size: 20px;
+    height: 50px;
+  }
+  
+  .grid_profesionales-1 {
+    grid-area: pf1;
+    margin-bottom: 30px;
+  }
+  
+  .grid_profesionales-2 {
+    grid-area: pf2;
+    margin-bottom: 30px;
+  }
+  
+  .grid_profesionales-3 {
+    grid-area: pf3;
+   
+  }
+  
+
   .mensaje {
     margin-right: 10px;
+  }
+
+  .DetalleContainer{
+    text-align: center;
   }
 }
