--- a/scss/parciales/_contacto.scss
+++ b/scss/parciales/_contacto.scss
@@ -1,3 +1,12 @@
+.mapa{
+    width: 100%;
+}
+
+
+
+
+
+
 .flexbox-contacto{
     display: flex;
     justify-content: center;
@@ -6,34 +15,37 @@
 
 .contacto{
     font-size: 180%;
+    flex-direction: row;
     position: relative;
     color: black;
-    display: block;
+    display: flex;
     padding: 0 0 15px 0;
     margin: 0 0 30px 0;
     margin-top: 30px;
     text-transform: uppercase;
     text-align: center;
 }
+
+
+
 .detalle-contacto{
-    margin: 80px;
-    border: 2px solid grey; 
-    padding: 10px;
+    margin:30px;
+    display:flex;
+    flex-direction:row;
+
 
     & div p{
-        
+
     margin: 20px;
 }
 
 }
 
-
 .consulta{
-    margin: 80px;
-    border: 2px solid grey; 
-    padding: 10px;
+    margin-top: 9px;
+    display:flex;
+    flex-direction:row;
 
-    
 }
 
 .consulta div{
@@ -42,5 +54,10 @@
 
 .button-enviar{
     text-align: right;
+}
+
+.btn{
+    background-color: blue;
+    align-items: right;
 }
 
