--- a/scss/parciales/_profesionales.scss
+++ b/scss/parciales/_profesionales.scss
@@ -8,6 +8,7 @@
 
 }
 
+
 .grid_profesionales{
 
     display: grid;
@@ -30,12 +31,14 @@
     font-size: 25px;
     text-align: $Centrado;
     height: 1px;
+    font-weight: lighter;
 }
 
 .profesionales-subtitulo{
     text-align: $Centrado;
     font-size: 20px;
     height: 50px;
+    font-weight: bold;
 }
 .grid_profesionales-1{
     grid-area: pf1;
