llorando de la emocion porque marreglé contacto

--- a/scss/parciales/_media-querys.scss
+++ b/scss/parciales/_media-querys.scss
@@ -109,9 +109,13 @@
     justify-items: center;
   }
   
-    .DetalleContainer{
-      text-align: center;
-    }
+  .DetalleContainer{
+    text-align: center;
+  }
+
+  .mapa{
+    width: 100%;
+  }
   }
 
   @media screen and (max-width: 1312px) {
@@ -141,3 +145,9 @@
   }
    
   }
+
+  
+
+
+
+  
