--- a/css/estilos.css
+++ b/css/estilos.css
@@ -273,10 +273,6 @@ header {
   padding-right: 40%;
 }
 
-.mapa {
-  width: 100%;
-}
-
 .flexbox-contacto {
   display: flex;
   justify-content: center;
@@ -288,26 +284,26 @@ header {
   flex-direction: row;
   position: relative;
   color: black;
-  display: flex;
   padding: 0 0 15px 0;
-  margin: 0 0 30px 0;
   margin-top: 30px;
   text-transform: uppercase;
   text-align: center;
 }
 
+.card {
+  margin: 20px;
+}
+
 .detalle-contacto {
-  margin: 30px;
   display: flex;
   flex-direction: row;
 }
 
-.detalle-contacto div p {
+.detalle-contacto div {
   margin: 20px;
 }
 
 .consulta {
-  margin-top: 9px;
   display: flex;
   flex-direction: row;
 }
@@ -417,6 +413,9 @@ header {
   }
   .DetalleContainer {
     text-align: center;
+  }
+  .mapa {
+    width: 100%;
   }
 }
 
