--- a/scss/parciales/_contacto.scss
+++ b/scss/parciales/_contacto.scss
@@ -1,11 +1,3 @@
-.mapa{
-    width: 100%;
-}
-
-
-
-
-
 
 .flexbox-contacto{
     display: flex;
@@ -18,31 +10,28 @@
     flex-direction: row;
     position: relative;
     color: black;
-    display: flex;
     padding: 0 0 15px 0;
-    margin: 0 0 30px 0;
     margin-top: 30px;
     text-transform: uppercase;
     text-align: center;
 }
 
-
-
-.detalle-contacto{
-    margin:30px;
-    display:flex;
-    flex-direction:row;
-
-
-    & div p{
-
+.card{
     margin: 20px;
 }
 
+.detalle-contacto{
+    display:flex;
+    flex-direction:row;
+
+    & div{
+        margin: 20px;
+    }
+
 }
 
+
 .consulta{
-    margin-top: 9px;
     display:flex;
     flex-direction:row;
 
