--- a/scss/parciales/_base.scss
+++ b/scss/parciales/_base.scss
@@ -96,7 +96,7 @@ header{
     color: black;
     font-size: 100%;
     font-style: normal;
-    text-align: left;
+    text-align: justify;
     padding: 10px;
     margin: 10px;
 
