--- a/scss/parciales/_obras.scss
+++ b/scss/parciales/_obras.scss
@@ -27,3 +27,11 @@
     padding-left: 40%;
     padding-right: 40%;
 }
+
+.carousel-item{
+    text-align: center;
+}
+
+button{
+   text-align: end;
+}
