--- a/css/estilos.css
+++ b/css/estilos.css
@@ -77,7 +77,7 @@ header {
   color: black;
   font-size: 100%;
   font-style: normal;
-  text-align: left;
+  text-align: justify;
   padding: 10px;
   margin: 10px;
 }
@@ -186,7 +186,7 @@ header {
   font-size: 25px;
   text-align: center;
   height: 1px;
-  font-weight: lighter;
+  font-weight: bold;
 }
 
 .profesionales-subtitulo {
@@ -271,6 +271,14 @@ header {
   text-align: center;
   padding-left: 40%;
   padding-right: 40%;
+}
+
+.carousel-item {
+  text-align: center;
+}
+
+button {
+  text-align: end;
 }
 
 .flexbox-contacto {
@@ -368,13 +376,14 @@ header {
     align-content: center;
     justify-items: center;
     align-items: center;
+    margin-top: 200px;
   }
   .grid_profesionales-titulo {
     grid-area: titulo;
     font-size: 25px;
     text-align: center;
     height: 1px;
-    margin: 100px;
+    font-weight: bold;
   }
   .profesionales-subtitulo {
     text-align: center;
@@ -393,7 +402,6 @@ header {
     grid-area: pf3;
   }
   .grid_objetivo {
-    padding-top: 20px;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 2fr 2fr;
@@ -405,9 +413,8 @@ header {
   }
   .grid_objetivo-texto {
     grid-area: "text";
-    margin: 10px;
   }
-  .video {
+  .grid_objetivo-video {
     grid-area: "video1";
     justify-items: center;
   }
@@ -421,7 +428,6 @@ header {
 
 @media screen and (max-width: 1312px) {
   .grid_objetivo {
-    padding-top: 20px;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 2fr 2fr;
@@ -433,9 +439,8 @@ header {
   }
   .grid_objetivo-texto {
     grid-area: "text";
-    margin: 10px;
   }
-  .video {
+  .grid_objetivo-video {
     grid-area: "video1";
     justify-items: center;
   }
