--- a/scss/parciales/_profesionales.scss
+++ b/scss/parciales/_profesionales.scss
@@ -31,7 +31,7 @@
     font-size: 25px;
     text-align: $Centrado;
     height: 1px;
-    font-weight: lighter;
+    font-weight: bold;
 }
 
 .profesionales-subtitulo{
