--- a/scss/parciales/_contacto.scss
+++ b/scss/parciales/_contacto.scss
@@ -10,7 +10,7 @@
     flex-direction: row;
     position: relative;
     color: black;
-    padding: 0 0 15px 0;
+    padding: 0 0 10px 0;
     margin-top: 30px;
     text-transform: uppercase;
     text-align: center;
@@ -18,12 +18,13 @@
 
 .card{
     margin: 20px;
+
 }
 
 .detalle-contacto{
     display:flex;
     flex-direction:row;
-
+    position: relative;
     & div{
         margin: 20px;
     }
@@ -39,14 +40,15 @@
 
 .consulta div{
     margin: 20px;
+    padding: 0px;
 }
-
-.button-enviar{
-    text-align: right;
+button{
+    position: relative;
 }
 
 .btn{
     background-color: blue;
-    align-items: right;
+    float: right;
+
 }
 
