--- a/scss/parciales/_profesionales.scss
+++ b/scss/parciales/_profesionales.scss
@@ -5,6 +5,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 50vh;
+    margin-bottom: 25px;
 
 }
 
@@ -14,7 +15,6 @@
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-template-rows: repeat(3, 1fr);
-    height: 1000px;
     grid-template-areas: 
     "titulo titulo titulo" 
     "pf1 pf2 pf3"
@@ -28,10 +28,14 @@
 
 .grid_profesionales-titulo{
     grid-area: titulo;
-    font-size: 25px;
+   
+}
+
+.titulo{
+    font-size: 50px;
     text-align: $Centrado;
-    height: 1px;
     font-weight: bold;
+
 }
 
 .profesionales-subtitulo{
