--- a/scss/parciales/_base.scss
+++ b/scss/parciales/_base.scss
@@ -101,17 +101,17 @@ header{
     margin: 10px;
 
 }
+footer{
+    position: relative;
 
-.propiedades-bajo{
-    float: left;
-   
 }
+
 
 .textoPie {
     text-align:end;
     color: black;
     float: left;
-    margin-top: 20px;
+    margin-top: 20px;    margin-left: 20px;
 }
 
 .whatsapp {
