--- a/css/estilos.css
+++ b/css/estilos.css
@@ -66,18 +66,24 @@ header {
 }
 
 .propiedades-titulo {
+  text-align: center;
   color: black;
+}
+
+.propiedades-texto {
+  text-align: justify;
+  color: black;
+}
+
+.propiedades-titulo {
   font-weight: bold;
   font-size: 205%;
-  text-align: center;
   margin: 30px;
 }
 
 .propiedades-texto {
-  color: black;
   font-size: 100%;
   font-style: normal;
-  text-align: justify;
   padding: 10px;
   margin: 10px;
 }
