ya me llega el email

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -390,6 +390,7 @@ button {
     font-size: 50px;
     text-align: center;
     font-weight: bold;
+    padding: 5px;
   }
   .profesionales-subtitulo {
     text-align: center;
