--- a/scss/parciales/_media-querys.scss
+++ b/scss/parciales/_media-querys.scss
@@ -65,7 +65,8 @@
       font-size: 50px;
       text-align: center;
       font-weight: bold;
-      padding: 5px;
+      padding-left: 2px;
+      padding-right: 2px;
 
     }
     
