--- a/css/estilos.css
+++ b/css/estilos.css
@@ -111,11 +111,29 @@ footer {
 .whatsapp {
   color: white;
   width: 100px;
-  padding: 0.5rem 1rem;
   text-align: center;
   position: fixed;
   right: 1rem;
-  bottom: 1rem;
+  bottom: 4rem;
+}
+
+.fab {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+}
+
+.fab:hover {
+  opacity: 0.7;
+}
+
+.fa-whatsapp {
+  background: green;
+  color: white;
 }
 
 .grid_inicio {
