--- a/scss/parciales/_base.scss
+++ b/scss/parciales/_base.scss
@@ -141,11 +141,28 @@ footer{
     
     color: $Color;
     width: 100px;
-    padding: 0.5rem 1rem;
     text-align: center;
     position: fixed;
     right: 1rem;
-    bottom: 1rem;
+    bottom: 4rem;
 }
 
 
+.fab {
+    padding: 20px;
+    font-size: 30px;
+    width: 30px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+    border-radius: 50%;
+    }
+    
+    .fab:hover {
+    opacity: 0.7;
+    }
+    
+    .fa-whatsapp {
+    background: green;
+    color: white;
+    }
