probando boton wpp

--- a/scss/parciales/_base.scss
+++ b/scss/parciales/_base.scss
@@ -140,10 +140,10 @@ footer{
 .whatsapp {
     
     color: $Color;
-    width: 100px;
     text-align: center;
     position: fixed;
     right: 1rem;
+    margin-top: 20px;    margin-left: 20px;
     bottom: 4rem;
 }
 
