--- a/css/estilos.css
+++ b/css/estilos.css
@@ -110,10 +110,11 @@ footer {
 
 .whatsapp {
   color: white;
-  width: 100px;
   text-align: center;
   position: fixed;
   right: 1rem;
+  margin-top: 20px;
+  margin-left: 20px;
   bottom: 4rem;
 }
 
@@ -377,6 +378,12 @@ button {
 }
 
 @media screen and (max-width: 780px) {
+  .whatsapp {
+    color: white;
+    position: fixed;
+    margin-top: 20px;
+    margin-left: 20px;
+  }
   .nav {
     width: 100%;
   }
