--- a/scss/parciales/_media-querys.scss
+++ b/scss/parciales/_media-querys.scss
@@ -15,6 +15,12 @@
   }
   
   @media screen and (max-width: 780px) {
+    .whatsapp {
+    
+      color: $Color;
+      position: fixed;
+      margin-top: 20px;    margin-left: 20px;
+  }
     .nav{
       width: 100%;
     }
