--- a/scss/parciales/_contacto.scss
+++ b/scss/parciales/_contacto.scss
@@ -52,3 +52,11 @@ button{
 
 }
 
+.letra{
+    font-style: normal;
+    font-weight: 1000;
+    padding: 10px;
+    margin: 10px;
+    color: black
+}
+
