--- a/css/estilos.css
+++ b/css/estilos.css
@@ -35,11 +35,19 @@ a {
   color: white;
 }
 
+.navbar-dark {
+  color: white;
+}
+
 .navbar-toggler {
   background-color: #6A0649;
 }
 
 .btn {
+  color: white;
+}
+
+.navbar-brand {
   color: white;
 }
 
@@ -59,7 +67,9 @@ a {
 }
 
 .nav-link {
+  background-color: white;
   color: black;
+  font-size: 20px;
 }
 
 .nav-link:hover {
@@ -92,6 +102,7 @@ header {
 .propiedades-texto {
   font-size: 100%;
   font-style: normal;
+  font-weight: 1000;
   padding: 10px;
   margin: 10px;
 }
@@ -362,10 +373,15 @@ button {
   float: right;
 }
 
+.letra {
+  font-style: normal;
+  font-weight: 1000;
+  padding: 10px;
+  margin: 10px;
+  color: black;
+}
+
 @media screen and (max-width: 600px) {
-  .nav {
-    width: 100%;
-  }
   .flexbox-contacto {
     display: grid;
     grid-template-columns: 1fr;
@@ -383,9 +399,6 @@ button {
     position: fixed;
     margin-top: 20px;
     margin-left: 20px;
-  }
-  .nav {
-    width: 100%;
   }
   .grid_inicio-estilo {
     border-bottom: 2px solid grey;
