--- a/css/estilos.css
+++ b/css/estilos.css
@@ -345,9 +345,7 @@ button {
 }
 
 .detalle-contacto {
-  display: flex;
-  flex-direction: row;
-  position: relative;
+  margin: auto;
 }
 
 .detalle-contacto div {
