--- a/scss/parciales/_contacto.scss
+++ b/scss/parciales/_contacto.scss
@@ -22,9 +22,7 @@
 }
 
 .detalle-contacto{
-    display:flex;
-    flex-direction:row;
-    position: relative;
+    margin: auto;
     & div{
         margin: 20px;
     }
