--- a/scss/parciales/_objetivo.scss
+++ b/scss/parciales/_objetivo.scss
@@ -6,26 +6,22 @@
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 50vh;
-}
 
-.containerO{
-    margin-top: 200px;
+}
+.flex{
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-around;
+    height: 900px;
     
 }
 
-.row{
+
+.fila{
     --bs-gutter-x: 0;
-
-}
-.objetivos div {
-    display:flex;
-    flex-direction:row;
-    padding: 0%;
+    margin-top: 200px;
+    padding: auto;
 }
 
-.video{
-    display:flex;
-    flex-direction:row;
-    margin-left: 0;
-    padding: 0%;
-}
+
