--- a/scss/parciales/_media-querys.scss
+++ b/scss/parciales/_media-querys.scss
@@ -89,9 +89,16 @@
       grid-area: pf3;
      
     }
-    
-    .containerO{
-      margin-top: 20px;
+    .flex{
+      height: 600px;
+    }
+    .fila{
+      margin-top: auto;
+      margin-bottom: auto;
+    }
+    .video{
+      width: 300px;
+      height: 200px;
     }
     
   .DetalleContainer{
